cognizantreflectionapi/src/CognizantReflect.Api/manifests/manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cognizantreflect-deployment
spec:
  selector:
    matchLabels:
      app: cognizantreflect-pod
  template:
    metadata:
      labels:
        app: cognizantreflect-pod
    spec:
      nodeName: aks-agentpool-21451765-vmss000000
      containers:
      - name: cognizantreflect-container
        image: reflectcontainerregistry.azurecr.io/cognizantreflect:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "256m"
        ports:
        - containerPort: 80
