cognizantreflectionapi/src/CognizantReflect.Api/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cognizantreflect
spec:
  type: ClusterIP
  selector:
    app: cognizantreflect-pod
  ports:
  - port: 80
