cognizantreflectionapi/src/CognizantReflect.Api/manifests/cert.yml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cognizantreflect-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts: 
    - cognizantreflectapi.com
    secretName: selfsigned-cert-tls
  rules:
  - host: cognizantreflectapi.com 
    http:
      paths:
      - backend:
          serviceName: cognizantreflect
          servicePort: 80
