cognizantreflectionapi/src/CognizantReflect.Api/manifests/manifest-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cognizantreflect-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: cognizantreflect
          servicePort: 80
